# backend/swagger.yaml
@@ -17,11 +17,11 @@ servers:
 tags:
   - name: All
 paths:
-  /generate-keys:
+  /order/new:
     post:
       tags:
         - All
-      summary: For buyer to get public and view key.
+      summary: For buyer to create a order and get public and view key from merchant.
       parameters:
         - name: order_id
           in: query
@@ -44,6 +44,13 @@ paths:
           schema:
             type: string
             example: 03ef729e7a7e02817545ffa2df38af48481c86afa74ba1d7c7801276edfb6e6568
+        - name: buyer_address
+          in: query
+          description: Buyer address to receive deposit or refunds after confirmation.
+          required: true
+          schema:
+            type: string
+            example: tcro
         - name: escrow_public_key
           in: query
           description: Escrow public key generated by order id.
@@ -65,14 +72,20 @@ paths:
             application/json:
               schema:
                 type: object
-                $ref: "#/components/schemas/Keys"
-          x-responseId: SuccessfulOperation
+                properties:
+                  public_key:
+                    type: string
+                    example: 02dc0cc2d6ba0cae2f8f0ec2368c21e54b6e758cc2e13fcbf46752f9a4d9cbd3de
+                  view_key:
+                    type: string
+                    example: 03ef729e7a7e02817545ffa2df38af48481c86afa74ba1d7c7801276edfb6e6568
+                    x-responseId: SuccessfulOperation
           x-uppercaseResponseId: SUCCESSFUL_OPERATION
-  /submit-commitment-and-nonce:
+  /order/payment-proof:
     post:
       tags:
         - All
-      summary: For buyer to get commitment and nonce.
+      summary: For buyer to submit transaction id of the payment to the 2-of-3 multi-sig address and nonce commitment to be used in the future signing process.
       parameters:
         - name: order_id
           in: query
@@ -81,13 +94,13 @@ paths:
           schema:
             type: string
             example: 1
-        - name: tx_id
+        - name: transaction_id
           in: query
           description: Payment to 2-of-3 multi-sig created and paid by buyer for the order.
           required: true
           schema:
             type: string
-            example: tx_id
+            example: transaction_id
         - name: commitment
           in: query
           description: Generated by buyer per order id.
@@ -102,15 +115,87 @@ paths:
             application/json:
               schema:
                 type: object
-                $ref: "#/components/schemas/CommitmentAndNonce"
+                properties:
+                  order_id:
+                    type: string
+                    example: 1
           x-responseId: SuccessfulOperation
           x-uppercaseResponseId: SUCCESSFUL_OPERATION
-  /submit-partial-signature-and-nonce:
+  /order/delivering:
     post:
       tags:
         - All
       summary: >-
-        For buyer to submit partial signature and nonce.
+        For merchant/escrow to mark the order as delivering
+      parameters:
+        - name: order_id
+          in: query
+          description: Unique order id from shopping cart.
+          required: true
+          schema:
+            type: string
+            example: 1
+      responses:
+        "200":
+          description: Order status
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Order"
+          x-responseId: SuccessfulOperation
+          x-uppercaseResponseId: SUCCESSFUL_OPERATION
+  /order/refunding:
+    post:
+      tags:
+        - All
+      summary: >-
+        For merchant/escrow to refund the order
+      parameters:
+        - name: order_id
+          in: query
+          description: Unique order id from shopping cart.
+          required: true
+          schema:
+            type: string
+            example: 1
+      responses:
+        "200":
+          description: Order status
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Order"
+          x-responseId: SuccessfulOperation
+          x-uppercaseResponseId: SUCCESSFUL_OPERATION
+  /order:
+    get:
+      tags:
+        - All
+      summary: >-
+        For buyer to query the status of an order
+      parameters:
+        - name: order_id
+          in: query
+          description: Unique order id from shopping cart.
+          required: true
+          schema:
+            type: string
+            example: 1
+      responses:
+        "200":
+          description: Order status
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Order"
+          x-responseId: SuccessfulOperation
+          x-uppercaseResponseId: SUCCESSFUL_OPERATION
+  /order/confirm/delivery:
+    post:
+      tags:
+        - All
+      summary: >-
+        For buyer to submit confirm delivery with partial signature and nonce.
       parameters:
         - name: order_id
           in: query
@@ -140,37 +225,148 @@ paths:
             application/json:
               schema:
                 type: object
-                $ref: "#/components/schemas/BroadcasgtedTransaction"
+                properties:
+                  transaction_id:
+                    type: string
+                    example: transaction-id
+          x-responseId: SuccessfulOperation
+          x-uppercaseResponseId: SUCCESSFUL_OPERATION
+  /order/confirm/refund:
+    post:
+      tags:
+        - All
+      summary: >-
+        For buyer to submit refund with partial signature and nonce.
+      parameters:
+        - name: order_id
+          in: query
+          description: Unique order id from shopping cart.
+          required: true
+          schema:
+            type: string
+            example: 1
+        - name: partial_signature
+          in: query
+          description: Partially signed result from buyer.
+          required: true
+          schema:
+            type: string
+            example: 08ae1301f5b9b10c74320ce9b7bb03f60fda4a90c79b0fc89779e43d84911361
+        - name: nonce
+          in: query
+          description: Nonce used in the generation of previous buyer_commitment.
+          required: true
+          schema:
+            type: string
+            example: 0304fb090e02b6c1bc5fd7acf5d0363314141ee642cc1656c038cf876274f3f042
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  transaction_id:
+                    type: string
+                    example: transaction-id
+          x-responseId: SuccessfulOperation
+          x-uppercaseResponseId: SUCCESSFUL_OPERATION
+  /order/pending-payment:
+    get:
+      tags:
+        - All
+      summary: >-
+        Get list of pending payment orders
+      responses:
+        "200":
+          description: Order status
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Order"
+          x-responseId: SuccessfulOperation
+          x-uppercaseResponseId: SUCCESSFUL_OPERATION
+  /order/pending-response:
+    get:
+      tags:
+        - All
+      summary: >-
+        Get list of pending payment orders
+      responses:
+        "200":
+          description: Order status
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Order"
+          x-responseId: SuccessfulOperation
+          x-uppercaseResponseId: SUCCESSFUL_OPERATION
+  /order/settled:
+    get:
+      tags:
+        - All
+      summary: >-
+        Get list of settled orders
+      responses:
+        "200":
+          description: Order status
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Order"
           x-responseId: SuccessfulOperation
           x-uppercaseResponseId: SUCCESSFUL_OPERATION
 components:
   schemas:
-    Keys:
+    Order:
       type: object
       properties:
-        public_key:
+        order_id:
           type: string
-          format: H256
-          example: 02dc0cc2d6ba0cae2f8f0ec2368c21e54b6e758cc2e13fcbf46752f9a4d9cbd3de
-        view_key:
+          example: 1
+        status:
           type: string
-          format: H256
-          example: 03ef729e7a7e02817545ffa2df38af48481c86afa74ba1d7c7801276edfb6e6568
-    CommitmentAndNonce:
-      type: object
-      properties:
-        commitment:
+          enum:
+            [
+              "PendingPayment",
+              "PendingResponse",
+              "Delivering",
+              "Refunding",
+              "Paid",
+              "Refunded",
+            ]
+        buyer_public_key:
           type: string
-          format: H256
-          example: 77d5925439c9f3f1a8d9716738022fb32f4db3eac21dae0d2014a32e2c65a349
+          example: 03bd1217267d99cbc1c38b9ef036eb2ffd6a2c5f6225a0ef9884d859a0a0bcddcd
+        buyer_view_key:
+          type: string
+          example: 02e647588828f33135652899152cbc12bef4db997b50bc59347e306debb22a8d44
+        escrow_public_key:
+          type: string
+          example: 03bd1217267d99cbc1c38b9ef036eb2ffd6a2c5f6225a0ef9884d859a0a0bcddcd
+        escrow_view_key:
+          type: string
+          example: 02e647588828f33135652899152cbc12bef4db997b50bc59347e306debb22a8d44
+        session_id:
+          description: ID of the multi-sig session
+          type: string
+          example:
+        payment_transaction_id:
+          type: string
+          example: payment-tx-id
+        settlement_transaction_id:
+          type: string
+          example: settlement-tx-id
+        nonce_commitment:
+          type: string
+          example: 02oddc0cc2d6ba0cae2f8f0ec2368c21e54b6e758cc2e13fcbf46752f9a4d9cbd3de
         nonce:
           type: string
-          format: H256
-          example: 0255e6f3dc7ff313d7e6efa6dff119e8e83f4b91b477f09ca6f6dea3fd6c6a6934
-    BroadcasgtedTransaction:
-      type: object
-      properties:
-        tx_id:
-          type: string
-          format: H256
-          example: tx_id
+          example: 03ef729e7a7e02817545ffa2df38af48481c86afa74ba1d7c7801276edfb6e6568
